# knowledge_garden

./: .gitignore  Makefile  README.md  pyproject.toml  quartz.config.ts  quartz.layout.ts  walk.py
content/: index.md
content/FastAPI/: FastAPI.md
content/GItHub Actions/: CD в Compute Cloud с GitHub Action.md  CI `isort` и `black.md  CI isort и black.md  CI тесты в Docker c использованием make.md  sed - изменение секретов .env файла.md
content/Python/: Poetry.md  Pytest. Фикстуры.md  UV.md
content/Yandex Cloud/: Бакет как Volume в Doсker контейнере.md  Конфликт Docker и UFW.md  Монтирование бакета на ВМ Compute Cloud.md  Подключение Container Registry к ВМ.md  Подключение к ВМ по SSH.md
content/Литература/: Математика и алгоритмы.md  Программирование.md
content/Регулярные выражения/: Регулярные выражения.md
quartz/i18n/locales/: en-US.ts
